
package storepb;

message user_login_c2s {
	required string username = 1;
	required string password = 2;
}

message User {
	message RegInfo {
		// qudao
		required string channel = 1;
		// android or ios
		required string os = 2;
		// register time (UTC second)
		required int32 time = 3;
		// ...
	}
	required string id = 1;
	required string uuid = 2;
	required RegInfo reg_info = 3;
	required int32 uid = 4;
}

message Player {
	required string id = 1;
	required int32 uid = 2;
	required string nick = 3;
	required int32 role_time = 4;
	required int64 coins = 5;
	required int32 last_login_time = 6;
}